# CharacterCode

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
Game/: main.cpp
Game/Core/: FileLoader.cpp  FileLoader.h  SceneManager.h  Timer.cpp  main.cpp
Game/Entities/: CollisionCheck.cpp  Enemy.cpp  Model.cpp  Model.h  Player.cpp  Player.h
Game/Graphics/: Camera.cpp  Light.cpp  Parallax.cpp  TextureLoader.h
Game/Helpers/: Settings.cpp  Settings.h
Game/IO/: Inputs.cpp  Inputs.h  TerminalIO.cpp
Game/Inventory/: Gadget.h  Gizmo.h  Training.h
Game/Scenes/: Level.cpp  Level.h  Scene.h
Game/Systems/: CombatSystem.cpp  Inventory.cpp  Inventory.h
Game/Virtuals/: Item.cpp  Object.cpp
Game/gameplay/: Attack.cpp  GameLogic.cpp
assets/: items
assets/json/: gadgets.json
data/: gadgets.json  gizmos.json  items  trainings.json  weapons.json
include/: Anorms.h  Attack.h  Camera.h  CollisionCheck.h  Common.h  Enemy.h  EnemyHandler.h  FileLoader.h  Gadget.h  GameLogic.h  Gizmo.h  Inputs.h  Inventory.h  Level.h  Light.h  Model.h  Object.h  Parallax.h  Player.h  Scene.h  SceneManager.h  TerminalIO.h  TextureLoader.h  Timer.h  Training.h  Weapon.h  WorldHandler.h  _3DModelLoader.h
include/Core/: SceneManager.h
include/Entities/: CollisionCheck.h  Enemy.h  Model.h  Pawn.h  Player.h
include/Graphics/: Camera.h  Light.h  Parallax.h  _3DModelLoader.h
include/Helpers/: Common.h  SceneSettings.h  Settings.h
include/IO/: Inputs.h  TerminalIO.h
include/Inventory/: Gadget.h  Gizmo.h  Item.h  Object.h  Training.h  Weapon.h
include/Scenes/: Level.h  LevelScene.h  Scene.h
include/Systems/: CombatSystem.h  Inventory.h
include/Virtuals/: Item.h  Object.h
include/gameplay/: GameLogic.h
src/: .gitignore  Attack.cpp  Camera.cpp  CollisionCheck.cpp  CombatSystem.cpp  Enemy.cpp  EnemyHandler.cpp  FileLoader.cpp  GameEntry.cpp  GameLogic.cpp  Inputs.cpp  Inventory.cpp  Level.cpp  Light.cpp  Model.cpp  Object.cpp  Parallax.cpp  Pawn.cpp  Player.cpp  Scene.cpp  SceneManager.cpp  TerminalIO.cpp  TextureLoader.cpp  Timer.cpp  Weapon.cpp  _3DModelLoader.cpp  main.cpp
src/Core/: SceneManager.cpp
src/Entities/: Enemy.cpp  Pawn.cpp  Player.cpp
src/Graphics/: Camera.cpp  Parallax.cpp  TextureLoader.cpp  _3DModelLoader.cpp
src/Helpers/: Timer.cpp
src/IO/: Inputs.cpp  TerminalIO.cpp
src/Inventory/: Item.cpp  Object.cpp  Weapon.cpp
src/Scenes/: Level.cpp  LevelScene.cpp
src/Systems/: CombatSystem.cpp  EnemyHandler.cpp  Inventory.cpp
src/Virtuals/: Object.cpp
src/gameplay/: GameLogic.cpp
